# MPpoly-converter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  speed_test.cpp
src/: CMakeLists.txt  converter.cpp  converter.hpp  converter_old.cpp  converter_old.hpp
test/: CMakeLists.txt  test_converter.cpp  test_converter_old.cpp
